feat(bill): 优化记账功能并添加日期解析
-移除 Bill 实体中的冗余字段
- 重新命名部分字段以提高可读性
- 添加日期解析功能，支持自然语言和数字日期格式
- 重构部分代码以提高可维护性